methods.picture.PictureMono1.scala.error
Erreur de compilation :
PictureMono1:3: error: value brushUp is not a member of Unit
    left();forward();brushDown()brushUp();backward()
                                ^PictureMono1:4: error: not found: value brushdown
    right ;forward();brushDown();brushdown();backward()
                                 ^